syntax = "proto3";

package roomPackage;

service roomProto {
  rpc placeOrder(requestPlaceOrder) returns (UpdateMessage);
  rpc createMessage(requestCreateMessage) returns (Message);
  rpc getAllMessages(requestReceiveMessage) returns (stream UpdateMessage);
  rpc getRecentMessageUpdate(requestReceiveAtStartup) returns (stream UpdateMessage);
  rpc getDutyEmployees(requestGetDutyEmployees) returns (Employees);
  rpc assignEmployeeTask(requestAssignEmployeeTask) returns (Response);
  // second phase
  rpc getOrderedProductstoShopper(requestOrderInfo) returns (OrdersList);
  rpc afterPackingByShopper(OrdersList) returns (Response);
  rpc getPackedProductstoCustomer(requestOrderInfo) returns (OrdersList);
  rpc afterReviewByCustomer(OrdersList) returns (Response);
}

message requestOrderInfo{
  string storeid = 1;
  string orderid = 2;
}

message OrdersList{
  string orderid = 1;
  repeated OrderListProduct products= 2;
}

message OrderListProduct{
  string productid = 1;
  string orderid = 2;
  string quantityId = 3;
  string productName = 4;
  string quantityName = 5;
  int32 dsPrice = 6;
  int32 mrpPrice = 7;
  string status = 8;
  int32 orderQuantity = 9;
  int32 issueQuantity = 10;  
  bool outOfStock = 11;
  int32 total_quantity = 12;
  int32 total_price = 13;
}

message voidNoParam{}

message Room {
  string roomId=1;
  string userid=2;
  string storeid=3;
  repeated Order orders = 4;
}

message Order{
  string orderid=1;
  string usercontact=2;
  UserAddress userAddress=3;
  string timestamp=4;
  repeated Product products = 5;
  int32 iteamSubtotal = 6;
  string GST = 7;
  int32 delCharges = 8;
  string serviceCharges = 9;
  int32 TotalAmount = 10;
  string allocationid = 11;
  string orderType = 12;
  string starttime = 13;
  string endtime = 14;
  repeated Userlist userlist = 15;
  repeated Message messages = 16;
  string colorCode = 17;
}

message Message{
  int32 messageid=1;
  string userid=2;
  int32 orderstatuscode=3;
  string message=4;
  string messagetype=5;
  string timestamp=6;
  string firstName=7;
  string lastName=8;
  string profilePicUrl=9;
  string senderUserType=10;
}

message Product{
    string productid = 1;
    string productName = 2;
    string quantityName = 3;
    string quantityId = 4;
    int32 orderQuantity = 5;
    int32 dsPrice = 6;
    int32 mrpPrice = 7;
    bool outOfStock = 8;
    int32 total_quantity = 9;
    int32 total_price = 10;
}

message Userlist{
    string id = 1;
    string firebaseuserid = 2;
}

message UserAddress{
  ByGoogle byGoogle = 1;
  ByUser byUser = 2;
  string _id = 3;
}

message ByGoogle{
  Loc loc = 1;
  string address = 2;
  string city = 3;
  string state = 4;
  string country = 5;
  string postalcode = 6;
}

message Loc{
  repeated string coordinates = 1;
  string type = 2;
}
message ByUser{
  string addressTag = 1;
  string userAddress = 2;
  string Landmark = 3;
}

message Response{
    string message = 1;
    int32 response_code = 2;
}

message requestPlaceOrder{
  string storeid = 1;
  string userid = 2;
  string timeslotid = 3;
  Order order = 5;
}

message requestCreateMessage{
  string roomId = 1;
  string orderid = 2;
  string userid = 3;
  Message msg = 4;
}

message requestReceiveMessage{
  string userid=1;
}

message requestReceiveAtStartup{
  string userid = 1;
  repeated Updates updates = 2;
}

message Updates{
  string roomId = 1;
  int32 lastMessageId = 2;
}

message UpdateMessage{
  int32 messageid=1;
  string roomId=2;
  string orderid=3;
  string userid=4;
  int32 orderstatuscode=5;
  string message=6;
  string messagetype=7;
  string timestamp=8;
  string firstName=9;
  string lastName=10;
  string profilePicUrl=11;
  string orderType=12;
  string orderEnd=13;
  string senderUserType=14;
  string colorCode=15;
}

message requestGetDutyEmployees{
  string storeid = 1;
  string Duty = 2;
}

message Employees{
  repeated Employee employees=1;
}
message Employee{
  string employeeid=1;
  string firstName=2;
  string lastName=3;
  bool onduty=4;
  int32 taskAssigned=5;
}

message requestAssignEmployeeTask{
  string employeeid=1;
  string orderid=2;
  string storeid=3;
  string job=4;
}